Swap to Font Awesome, fix alignment

--- a/sass/all.scss
+++ b/sass/all.scss
@@ -21,6 +21,7 @@
     a {
       padding: 5px;
       font-size: 2.5em;
+      margin-left: 20px;
     }
   }
 }
@@ -46,8 +47,8 @@
   text-align: left;
   .contact-grid {
     display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 25% 25% 50%;
+    // grid-gap: 20px;
+    grid-template-columns: 20% 20% 60%;
 
       .contact-info {
         grid-column: 1 / 3;
@@ -65,12 +66,24 @@
       }
 
       a {
-        display: block;
-        font-size: 1.5em;
+        padding-bottom: 20px;
+        display: inline-block;
 
-        &:before {
-          font-size: 2.5em;
-          padding-right: 20px;
+        i.fa {
+          transition: unset;
+          font-size: 2.4em;
+          width: 40px;
+          height: 40px;
+          text-align: center;
+          vertical-align: middle;
+        }
+
+        span {
+          transition: unset;
+          font-size: 1.7em;
+          text-align: center;
+          vertical-align: middle;
+          margin-left: 20px;
         }
       }
 
